--- a/FitHub/FitHub/Repository/RepositoryViewController.storyboard
+++ b/FitHub/FitHub/Repository/RepositoryViewController.storyboard
@@ -21,16 +21,16 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="A2q-Qx-ict">
-                                        <rect key="frame" x="10" y="10" width="355" height="434.33333333333331"/>
+                                        <rect key="frame" x="10" y="20" width="355" height="432"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KsB-OY-aUP">
-                                                <rect key="frame" x="0.0" y="0.0" width="355" height="24"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="355" height="21.666666666666668"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ScZ-JE-XWS">
-                                                <rect key="frame" x="0.0" y="34" width="355" height="30"/>
+                                                <rect key="frame" x="0.0" y="31.666666666666657" width="355" height="30"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forked from " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Blv-QP-YPG">
                                                         <rect key="frame" x="0.0" y="0.0" width="82.333333333333329" height="30"/>
@@ -56,7 +56,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mc3-4t-2Z5">
-                                                <rect key="frame" x="0.0" y="74" width="355" height="60"/>
+                                                <rect key="frame" x="0.0" y="71.666666666666657" width="355" height="60"/>
                                                 <subviews>
                                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1U-2U-AId">
                                                         <rect key="frame" x="0.0" y="0.0" width="118.33333333333333" height="60"/>
@@ -104,20 +104,20 @@ Fork</string>
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JDv-u5-dHC">
-                                                <rect key="frame" x="0.0" y="144" width="355" height="14.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="141.66666666666666" width="355" height="14.333333333333343"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pij-5x-8Cp">
-                                                <rect key="frame" x="0.0" y="168.33333333333331" width="355" height="128"/>
+                                                <rect key="frame" x="0.0" y="166" width="355" height="128"/>
                                                 <color key="backgroundColor" red="0.15686274510000001" green="0.65490196079999996" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="127.99999999999997" id="nKa-6e-toS"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OaQ-u7-BtB">
-                                                <rect key="frame" x="0.0" y="306.33333333333331" width="355" height="128"/>
+                                                <rect key="frame" x="0.0" y="304" width="355" height="128"/>
                                                 <color key="backgroundColor" red="0.41568627450000001" green="0.45098039220000002" blue="0.49019607840000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="127.99999999999997" id="JxI-jL-UhM"/>
@@ -137,8 +137,8 @@ Fork</string>
                                     <constraint firstItem="A2q-Qx-ict" firstAttribute="leading" secondItem="VED-qe-aYZ" secondAttribute="leading" constant="10" id="83s-27-cdo"/>
                                     <constraint firstAttribute="trailing" secondItem="A2q-Qx-ict" secondAttribute="trailing" constant="10" id="SQy-J4-6vO"/>
                                     <constraint firstItem="KsB-OY-aUP" firstAttribute="width" secondItem="VED-qe-aYZ" secondAttribute="width" constant="-20" id="ZeL-QR-3EF"/>
-                                    <constraint firstItem="A2q-Qx-ict" firstAttribute="top" secondItem="VED-qe-aYZ" secondAttribute="top" constant="10" id="iwt-Hi-nbo"/>
-                                    <constraint firstAttribute="bottom" secondItem="A2q-Qx-ict" secondAttribute="bottom" constant="10" id="r7M-Bw-KCQ"/>
+                                    <constraint firstItem="A2q-Qx-ict" firstAttribute="top" secondItem="VED-qe-aYZ" secondAttribute="top" constant="20" id="iwt-Hi-nbo"/>
+                                    <constraint firstAttribute="bottom" secondItem="A2q-Qx-ict" secondAttribute="bottom" constant="20" id="r7M-Bw-KCQ"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
